day-12/test-cert-manager.yaml
# E2E test manifest to check if the cert-manager is working
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-test
