day-12/nginx-https-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: webserver
        ports:
          - containerPort: 80
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "250m"
        volumeMounts:
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-https
  annotations:
    cert-manager.io/issuer: 'cloudflare-production'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - '*.iowqoeywqoeysoadyoasdyoasdyasodiyasod.uk' # this is the domain configure in the issuer
      secretName: nginx-ingress-production
  rules:
    - host: 'nginx.iowqoeywqoeysoadyoasdyoasdyasodiyasod.uk'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
